@@ -313,7 +313,6 @@ cMenuSetupPage *cPluginTtxtsubs::SetupMenu(void)
 bool cPluginTtxtsubs::SetupParse(const char *Name, const char *Value)
 {
   if(!strcasecmp(Name, "Display")) { globals.mDoDisplay = atoi(Value); globals.mRealDoDisplay=globals.mDoDisplay; }
-  else if(!strcasecmp(Name, "Record")) globals.mDoRecord = atoi(Value);
   else if(!strcasecmp(Name, "LiveDelay")) globals.mLiveDelay = atoi(Value);
   else if(!strcasecmp(Name, "ReplayDelay")) globals.mReplayDelay = atoi(Value);
   else if(!strcasecmp(Name, "ReplayTsDelay")) globals.mReplayTsDelay = atoi(Value);
@@ -523,7 +522,6 @@ cMenuSetupTtxtsubs::cMenuSetupTtxtsubs(cPluginTtxtsubs *ttxtsubs, int doStore)
   }
 
   Add(new cMenuEditBoolItem(tr("Display Subtitles"), &mConf.mDoDisplay));
-  Add(new cMenuEditBoolItem(tr("Record Subtitles"), &mConf.mDoRecord));
   Add(new cMenuEditIntItem(tr("Live Delay"), &mConf.mLiveDelay, 0, 5000));
   Add(new cMenuEditIntItem(tr("Replay Delay (PES)"), &mConf.mReplayDelay, 0, 5000));
   Add(new cMenuEditIntItem(tr("Replay Delay (TS)"), &mConf.mReplayTsDelay, 0, 5000));
@@ -590,7 +588,6 @@ void cMenuSetupTtxtsubs::Store(void)
   }
 
   SetupStore("Display", mConf.mDoDisplay);
-  SetupStore("Record", mConf.mDoRecord);
   SetupStore("LiveDelay", mConf.mLiveDelay);
   SetupStore("ReplayDelay", mConf.mReplayDelay);
   SetupStore("ReplayTsDelay", mConf.mReplayTsDelay);
